@@ -427,6 +427,18 @@ def lastupdate(args):
     perform.execute(command)
 
 
+def listall(args):
+    command = ("apt-cache dumpavail |"
+               "egrep \"^(Package|Description): \" |"
+               "awk '/^Package: /{pkg=$2} /^Description: /"
+               "{printf(\"%-24s %s\\n\", pkg,"
+               "substr($0,13))}' | sort -u -k 1b,1")
+    if args.pattern:
+        command = "{} | /bin/grep '{}'".format(command, args.pattern)
+    perform.execute(command)
+
+
+
 def listcache(args):
     """List the contents of the download cache"""
     command = "printf 'Found %d files %s in the cache.\n\n'\
